parser_bin/mysql.output
Terminals unused in grammar

   ADD
   ALTER
   ANALYZE
   BEFORE
   CALL
   CASCADE
   CHANGE
   CHECK
   COLUMN
   CONDITION
   CONSTRAINT
   CONTINUE
   CURSOR
   DATABASES
   DECLARE
   DESCRIBE
   DETERMINISTIC
   DIV
   DROP
   DUAL
   EACH
   ELSEIF
   EXIT
   EXPLAIN
   FETCH
   FOREIGN
   GRANT
   INFILE
   INOUT
   INSENSITIVE
   ITERATE
   KEYS
   KILL
   LEAVE
   LINES
   LOAD
   LOCALTIME
   LOCALTIMESTAMP
   LOCK
   LONG
   LOOP
   MATCH
   MINUTE_MICROSECOND
   MINUTE_SECOND
   MODIFIES
   NO_WRITE_TO_BINLOG
   NUMBER
   OPTIMIZE
   OPTION
   OPTIONALLY
   OUT
   PRECISION
   PROCEDURE
   PURGE
   READ
   READS
   REFERENCES
   RELEASE
   RENAME
   REPEAT
   REQUIRE
   RESTRICT
   RETURN
   REVOKE
   SCHEMAS
   SECOND_MICROSECOND
   SENSITIVE
   SEPARATOR
   SHOW
   SONAME
   SPATIAL
   SPECIFIC
   SQL
   SQLEXCEPTION
   SQLSTATE
   SQLWARNING
   SSL
   STARTING
   TERMINATED
   TO
   TRIGGER
   UNDO
   UNLOCK
   USAGE
   UTC_DATE
   UTC_TIME
   UTC_TIMESTAMP
   VARYING
   WHILE
   WRITE
   ESCAPED


Rules useless in parser due to conflicts

  101 expr: BINARY expr


State 56 conflicts: 64 reduce/reduce
State 85 conflicts: 21 shift/reduce
State 186 conflicts: 2 shift/reduce
State 357 conflicts: 2 shift/reduce, 64 reduce/reduce


Grammar

    0 $accept: inputstring $end

    1 inputstring: stmt_list
    2            | sql_segment
    3            | sql_segment ';' stmt_list

    4 stmt_list: stmt
    5          | stmt ';'
    6          | stmt ';' stmt_list

    7 sql_segment: select_after_where

    8 select_after_where: val_list opt_groupby opt_having opt_orderby opt_limit opt_union

    9 expr: NAME
   10     | NAME '.' NAME
   11     | USERVAR
   12     | STRING
   13     | INTNUM
   14     | APPROXNUM
   15     | BOOL
   16     | expr '+' expr
   17     | expr '-' expr
   18     | expr '*' expr
   19     | expr '/' expr
   20     | expr '%' expr
   21     | expr MOD expr
   22     | '-' expr
   23     | expr ANDOP expr
   24     | expr OR expr
   25     | expr XOR expr
   26     | expr '|' expr
   27     | expr '&' expr
   28     | expr '^' expr
   29     | expr SHIFT expr
   30     | NOT expr
   31     | '!' expr
   32     | expr COMPARISON expr
   33     | '(' expr ')'
   34     | '(' expr
   35     | '{' NAME expr '}'
   36     | expr COMPARISON '(' select_stmt ')'
   37     | expr COMPARISON ANY '(' select_stmt ')'
   38     | expr COMPARISON SOME '(' select_stmt ')'
   39     | expr COMPARISON ALL '(' select_stmt ')'
   40     | expr IS NULLX
   41     | expr IS NOT NULLX
   42     | expr IS BOOL
   43     | expr IS NOT BOOL
   44     | USERVAR ASSIGN expr
   45     | expr BETWEEN expr AND expr
   46     | expr IN '(' val_list ')'
   47     | expr NOT IN '(' val_list ')'
   48     | expr IN '(' select_stmt ')'
   49     | expr NOT IN '(' select_stmt ')'
   50     | EXISTS '(' select_stmt ')'
   51     | '(' select_stmt ')' opt_as_alias
   52     | RISK_FUNCTION '(' opt_val_list ')'
   53     | NAME '(' opt_val_list ')'
   54     | FCOUNT '(' '*' ')'
   55     | FCOUNT '(' expr ')'
   56     | FSUBSTRING '(' val_list ')'
   57     | FSUBSTRING '(' expr FROM expr ')'
   58     | FSUBSTRING '(' expr FROM expr FOR expr ')'
   59     | FTRIM '(' val_list ')'
   60     | FTRIM '(' trim_ltb expr FROM val_list ')'
   61     | FDATE_ADD '(' expr ',' interval_exp ')'
   62     | FDATE_SUB '(' expr ',' interval_exp ')'
   63     | CONVERT '(' expr USING NAME ')'
   64     | CONVERT '(' expr ',' NAME ')'
   65     | IF '(' expr ',' expr ',' expr ')'
   66     | BINARY expr

   67 val_list: expr
   68         | expr ',' val_list

   69 opt_val_list: /* empty */
   70             | val_list

   71 trim_ltb: LEADING
   72         | TRAILING
   73         | BOTH

   74 interval_exp: INTERVAL expr DAY_HOUR
   75             | INTERVAL expr DAY_MICROSECOND
   76             | INTERVAL expr DAY_MINUTE
   77             | INTERVAL expr DAY_SECOND
   78             | INTERVAL expr YEAR_MONTH
   79             | INTERVAL expr YEAR
   80             | INTERVAL expr HOUR_MICROSECOND
   81             | INTERVAL expr HOUR_MINUTE
   82             | INTERVAL expr HOUR_SECOND

   83 expr: CASE expr case_list END
   84     | CASE expr case_list ELSE expr END
   85     | CASE case_list END
   86     | CASE case_list ELSE expr END

   87 case_list: WHEN expr THEN expr
   88          | case_list WHEN expr THEN expr

   89 expr: expr LIKE expr
   90     | expr NOT LIKE expr
   91     | expr REGEXP expr
   92     | expr NOT REGEXP expr
   93     | CURRENT_TIMESTAMP
   94     | CURRENT_DATE
   95     | CURRENT_TIME
   96     | CURRENT_USER
   97     | CURRENT_TIMESTAMP '(' ')'
   98     | CURRENT_DATE '(' ')'
   99     | CURRENT_TIME '(' ')'
  100     | CURRENT_USER '(' ')'
  101     | BINARY expr

  102 stmt: select_stmt

  103 select_stmt: SELECT select_opts select_expr_list opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list opt_union
  104            | SELECT select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list opt_union

  105 opt_union: /* empty */
  106          | UNION select_opts select_stmt
  107          | UNION select_opts '(' select_stmt ')' opt_as_alias

  108 opt_where: /* empty */
  109          | WHERE expr

  110 opt_groupby: /* empty */
  111            | GROUP BY groupby_list opt_with_rollup

  112 groupby_list: expr opt_asc_desc
  113             | groupby_list ',' expr opt_asc_desc

  114 opt_asc_desc: /* empty */
  115             | ASC
  116             | DESC

  117 opt_with_rollup: /* empty */
  118                | WITH ROLLUP

  119 opt_having: /* empty */
  120           | HAVING expr

  121 opt_orderby: /* empty */
  122            | ORDER BY groupby_list

  123 opt_limit: /* empty */
  124          | LIMIT expr
  125          | LIMIT expr ',' expr
  126          | LIMIT expr OFFSET expr

  127 opt_into_list: /* empty */
  128              | INTO column_list
  129              | INTO OUTFILE STRING

  130 column_list: NAME
  131            | column_list ',' NAME

  132 select_opts: /* empty */
  133            | select_opts ALL
  134            | select_opts DISTINCT
  135            | select_opts DISTINCTROW
  136            | select_opts HIGH_PRIORITY
  137            | select_opts STRAIGHT_JOIN
  138            | select_opts SQL_SMALL_RESULT
  139            | select_opts SQL_BIG_RESULT
  140            | select_opts SQL_CALC_FOUND_ROWS

  141 select_expr_list: select_expr
  142                 | select_expr_list ',' select_expr
  143                 | '*'

  144 select_expr: expr opt_as_alias

  145 opt_as_alias: AS NAME
  146             | NAME
  147             | /* empty */

  148 table_references: table_reference
  149                 | table_references ',' table_reference

  150 table_reference: table_factor
  151                | join_table

  152 table_factor: NAME opt_as_alias index_hint
  153             | NAME '.' NAME opt_as_alias index_hint
  154             | '`' NAME '`' opt_as_alias index_hint
  155             | '`' NAME '.' NAME '`' opt_as_alias index_hint
  156             | table_subquery opt_as NAME
  157             | '(' table_references ')'
  158             | '{' NAME table_reference '}'

  159 opt_as: AS
  160       | /* empty */

  161 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
  162           | table_reference STRAIGHT_JOIN table_factor
  163           | table_reference STRAIGHT_JOIN table_factor ON expr
  164           | table_reference left_or_right opt_outer JOIN table_factor join_condition
  165           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

  166 opt_inner_cross: /* empty */
  167                | INNER
  168                | CROSS

  169 opt_outer: /* empty */
  170          | OUTER

  171 left_or_right: LEFT
  172              | RIGHT

  173 opt_left_or_right_outer: LEFT opt_outer
  174                        | RIGHT opt_outer
  175                        | /* empty */

  176 opt_join_condition: /* empty */
  177                   | join_condition

  178 join_condition: ON expr
  179               | USING '(' column_list ')'

  180 index_hint: USE KEY opt_for_join '(' index_list ')'
  181           | IGNORE KEY opt_for_join '(' index_list ')'
  182           | FORCE KEY opt_for_join '(' index_list ')'
  183           | /* empty */

  184 opt_for_join: FOR JOIN
  185             | /* empty */

  186 index_list: NAME
  187           | index_list ',' NAME

  188 table_subquery: '(' select_stmt ')'

  189 stmt: delete_stmt

  190 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

  191 delete_opts: delete_opts LOW_PRIORITY
  192            | delete_opts QUICK
  193            | delete_opts IGNORE
  194            | /* empty */

  195 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

  196 delete_list: NAME opt_dot_star
  197            | delete_list ',' NAME opt_dot_star

  198 opt_dot_star: /* empty */
  199             | '.' '*'

  200 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

  201 stmt: insert_stmt

  202 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

  203 opt_ondupupdate: /* empty */
  204                | ONDUPLICATE KEY UPDATE insert_asgn_list

  205 insert_opts: /* empty */
  206            | insert_opts LOW_PRIORITY
  207            | insert_opts DELAYED
  208            | insert_opts HIGH_PRIORITY
  209            | insert_opts IGNORE

  210 opt_into: INTO
  211         | /* empty */

  212 opt_col_names: /* empty */
  213              | '(' column_list ')'

  214 insert_vals_list: '(' insert_vals ')'
  215                 | insert_vals_list ',' '(' insert_vals ')'

  216 insert_vals: expr
  217            | DEFAULT
  218            | insert_vals ',' expr
  219            | insert_vals ',' DEFAULT

  220 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate

  221 insert_asgn_list: NAME COMPARISON expr
  222                 | NAME COMPARISON DEFAULT
  223                 | insert_asgn_list ',' NAME COMPARISON expr
  224                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  225 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  226 stmt: replace_stmt

  227 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  228             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  229             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  230 stmt: update_stmt

  231 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  232 update_opts: /* empty */
  233            | insert_opts LOW_PRIORITY
  234            | insert_opts IGNORE

  235 update_asgn_list: NAME COMPARISON expr
  236                 | NAME '.' NAME COMPARISON expr
  237                 | update_asgn_list ',' NAME COMPARISON expr
  238                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  239 stmt: create_database_stmt

  240 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  241                     | CREATE SCHEMA opt_if_not_exists NAME

  242 opt_if_not_exists: /* empty */
  243                  | IF EXISTS

  244 stmt: create_table_stmt

  245 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  246                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  247                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  248                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  249                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  250                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  251 opt_temporary: /* empty */
  252              | TEMPORARY

  253 create_col_list: create_definition
  254                | create_col_list ',' create_definition

  255 create_definition: PRIMARY KEY '(' column_list ')'
  256                  | KEY '(' column_list ')'
  257                  | INDEX '(' column_list ')'
  258                  | FULLTEXT INDEX '(' column_list ')'
  259                  | FULLTEXT KEY '(' column_list ')'

  260 $@1: /* empty */

  261 create_definition: $@1 NAME data_type column_atts

  262 column_atts: /* empty */
  263            | column_atts NOT NULLX
  264            | column_atts NULLX
  265            | column_atts DEFAULT STRING
  266            | column_atts DEFAULT INTNUM
  267            | column_atts DEFAULT APPROXNUM
  268            | column_atts DEFAULT BOOL
  269            | column_atts AUTO_INCREMENT
  270            | column_atts UNIQUE '(' column_list ')'
  271            | column_atts UNIQUE KEY
  272            | column_atts PRIMARY KEY
  273            | column_atts KEY
  274            | column_atts COMMENT STRING

  275 opt_length: /* empty */
  276           | '(' INTNUM ')'
  277           | '(' INTNUM ',' INTNUM ')'

  278 opt_binary: /* empty */
  279           | BINARY

  280 opt_uz: /* empty */
  281       | opt_uz UNSIGNED
  282       | opt_uz ZEROFILL

  283 opt_csc: /* empty */
  284        | opt_csc CHAR SET STRING
  285        | opt_csc COLLATE STRING

  286 data_type: BIT opt_length
  287          | TINYINT opt_length opt_uz
  288          | SMALLINT opt_length opt_uz
  289          | MEDIUMINT opt_length opt_uz
  290          | INT opt_length opt_uz
  291          | INTEGER opt_length opt_uz
  292          | BIGINT opt_length opt_uz
  293          | REAL opt_length opt_uz
  294          | DOUBLE opt_length opt_uz
  295          | FLOAT opt_length opt_uz
  296          | DECIMAL opt_length opt_uz
  297          | DATE
  298          | TIME
  299          | TIMESTAMP
  300          | DATETIME
  301          | YEAR
  302          | CHAR opt_length opt_csc
  303          | VARCHAR '(' INTNUM ')' opt_csc
  304          | BINARY opt_length
  305          | VARBINARY '(' INTNUM ')'
  306          | TINYBLOB
  307          | BLOB
  308          | MEDIUMBLOB
  309          | LONGBLOB
  310          | TINYTEXT opt_binary opt_csc
  311          | TEXT opt_binary opt_csc
  312          | MEDIUMTEXT opt_binary opt_csc
  313          | LONGTEXT opt_binary opt_csc
  314          | ENUM '(' enum_list ')' opt_csc
  315          | SET '(' enum_list ')' opt_csc

  316 enum_list: STRING
  317          | enum_list ',' STRING

  318 create_select_statement: opt_ignore_replace opt_as select_stmt

  319 opt_ignore_replace: /* empty */
  320                   | IGNORE
  321                   | REPLACE

  322 stmt: set_stmt

  323 set_stmt: SET set_list

  324 set_list: set_expr
  325         | set_list ',' set_expr

  326 set_expr: USERVAR COMPARISON expr
  327         | USERVAR ASSIGN expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 31
'%' (37) 20
'&' (38) 27
'(' (40) 33 34 36 37 38 39 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65 97 98 99 100 107 157 179 180 181 182 188 213
    214 215 245 246 247 249 255 256 257 258 259 270 276 277 303 305
    314 315
')' (41) 33 36 37 38 39 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 97 98 99 100 107 157 179 180 181 182 188 213 214
    215 245 246 247 249 255 256 257 258 259 270 276 277 303 305 314
    315
'*' (42) 18 54 143 199
'+' (43) 16
',' (44) 61 62 64 65 68 113 125 131 142 149 187 197 215 218 219 223
    224 237 238 254 277 317 325
'-' (45) 17 22
'.' (46) 10 153 155 199 236 238 246 249 250
'/' (47) 19
';' (59) 3 5 6
'^' (94) 28
'`' (96) 154 155
'{' (123) 35 158
'|' (124) 26
'}' (125) 35 158
error (256)
NAME (258) 9 10 35 53 63 64 130 131 145 146 152 153 154 155 156 158
    186 187 190 196 197 202 220 221 222 223 224 225 227 228 229 235
    236 237 238 240 241 245 246 247 248 249 250 261
RISK_FUNCTION (259) 52
STRING (260) 12 129 265 274 284 285 316 317
INTNUM (261) 13 266 276 277 303 305
BOOL (262) 15 42 43 268
APPROXNUM (263) 14 267
USERVAR (264) 11 44 326 327
ASSIGN (265) 44 327
OR (266) 24
XOR (267) 25
ANDOP (268) 23
REGEXP (269) 91 92
LIKE (270) 89 90
IS (271) 40 41 42 43
IN (272) 46 47 48 49
NOT (273) 30 41 43 47 49 90 92 263
BETWEEN (274) 45
COMPARISON (275) 32 36 37 38 39 221 222 223 224 235 236 237 238 326
SHIFT (276) 29
MOD (277) 21
UMINUS (278)
ADD (279)
ALL (280) 39 133
ALTER (281)
ANALYZE (282)
AND (283) 45
ANY (284) 37
AS (285) 145 159
ASC (286) 115
AUTO_INCREMENT (287) 269
BEFORE (288)
BIGINT (289) 292
BINARY (290) 66 101 279 304
BIT (291) 286
BLOB (292) 307
BOTH (293) 73
BY (294) 111 122
CALL (295)
CASCADE (296)
CASE (297) 83 84 85 86
CHANGE (298)
CHAR (299) 284 302
CHECK (300)
COLLATE (301) 285
COLUMN (302)
COMMENT (303) 274
CONDITION (304)
CONSTRAINT (305)
CONTINUE (306)
CONVERT (307) 63 64
CREATE (308) 240 241 245 246 247 248 249 250
CROSS (309) 168
CURRENT_DATE (310) 94 98
CURRENT_TIME (311) 95 99
CURRENT_TIMESTAMP (312) 93 97
CURRENT_USER (313) 96 100
CURSOR (314)
DATABASE (315) 240
DATABASES (316)
DATE (317) 297
DATETIME (318) 300
DAY_HOUR (319) 74
DAY_MICROSECOND (320) 75
DAY_MINUTE (321) 76
DAY_SECOND (322) 77
DECIMAL (323) 296
DECLARE (324)
DEFAULT (325) 217 219 222 224 265 266 267 268
DELAYED (326) 207
DELETE (327) 190 195 200
DESC (328) 116
DESCRIBE (329)
DETERMINISTIC (330)
DISTINCT (331) 134
DISTINCTROW (332) 135
DIV (333)
DOUBLE (334) 294
DROP (335)
DUAL (336)
EACH (337)
ELSE (338) 84 86
ELSEIF (339)
END (340) 83 84 85 86
ENUM (341) 314
EXIT (342)
EXPLAIN (343)
FETCH (344)
FLOAT (345) 295
FOR (346) 58 184
FORCE (347) 182
FOREIGN (348)
FROM (349) 57 58 60 104 190 195 200
FULLTEXT (350) 258 259
GRANT (351)
GROUP (352) 111
HAVING (353) 120
HIGH_PRIORITY (354) 136 208
HOUR_MICROSECOND (355) 80
HOUR_MINUTE (356) 81
HOUR_SECOND (357) 82
IF (358) 65 243
IGNORE (359) 181 193 209 234 320
INFILE (360)
INDEX (361) 257 258
INNER (362) 167
INOUT (363)
INSENSITIVE (364)
INSERT (365) 202 220 225
INT (366) 290
INTEGER (367) 291
INTERVAL (368) 74 75 76 77 78 79 80 81 82
INTO (369) 128 129 210
ITERATE (370)
JOIN (371) 161 164 165 184
KEY (372) 180 181 182 204 255 256 259 271 272 273
KEYS (373)
KILL (374)
LEADING (375) 71
LEAVE (376)
LEFT (377) 171 173
LIMIT (378) 124 125 126
LINES (379)
LOAD (380)
LOCALTIME (381)
LOCALTIMESTAMP (382)
LOCK (383)
LONG (384)
LONGBLOB (385) 309
LONGTEXT (386) 313
LOOP (387)
LOW_PRIORITY (388) 191 206 233
MATCH (389)
MEDIUMBLOB (390) 308
MEDIUMINT (391) 289
MEDIUMTEXT (392) 312
MINUTE_MICROSECOND (393)
MINUTE_SECOND (394)
MODIFIES (395)
NATURAL (396) 165
NO_WRITE_TO_BINLOG (397)
NULLX (398) 40 41 263 264
NUMBER (399)
ON (400) 163 178
ONDUPLICATE (401) 204
OPTIMIZE (402)
OPTION (403)
OPTIONALLY (404)
ORDER (405) 122
OUT (406)
OUTER (407) 170
OUTFILE (408) 129
PRECISION (409)
PRIMARY (410) 255 272
PROCEDURE (411)
PURGE (412)
QUICK (413) 192
READ (414)
READS (415)
REAL (416) 293
REFERENCES (417)
RELEASE (418)
RENAME (419)
REPEAT (420)
REPLACE (421) 227 228 229 321
REQUIRE (422)
RESTRICT (423)
RETURN (424)
REVOKE (425)
RIGHT (426) 172 174
ROLLUP (427) 118
SCHEMA (428) 241
SCHEMAS (429)
SECOND_MICROSECOND (430)
SELECT (431) 103 104
SENSITIVE (432)
SEPARATOR (433)
SET (434) 220 228 231 284 315 323
SHOW (435)
SMALLINT (436) 288
SOME (437) 38
SONAME (438)
SPATIAL (439)
SPECIFIC (440)
SQL (441)
SQLEXCEPTION (442)
SQLSTATE (443)
SQLWARNING (444)
SQL_BIG_RESULT (445) 139
SQL_CALC_FOUND_ROWS (446) 140
SQL_SMALL_RESULT (447) 138
SSL (448)
STARTING (449)
STRAIGHT_JOIN (450) 137 162 163
TABLE (451) 245 246 247 248 249 250
TEMPORARY (452) 252
TERMINATED (453)
TEXT (454) 311
THEN (455) 87 88
TIME (456) 298
TIMESTAMP (457) 299
TINYBLOB (458) 306
TINYINT (459) 287
TINYTEXT (460) 310
TO (461)
TRAILING (462) 72
TRIGGER (463)
UNDO (464)
UNION (465) 106 107
UNIQUE (466) 270 271
UNLOCK (467)
UNSIGNED (468) 281
UPDATE (469) 204 231
USAGE (470)
USE (471) 180
USING (472) 63 179 200
UTC_DATE (473)
UTC_TIME (474)
UTC_TIMESTAMP (475)
VALUES (476) 202 227
VARBINARY (477) 305
VARCHAR (478) 303
VARYING (479)
WHEN (480) 87 88
WHERE (481) 109
WHILE (482)
WITH (483) 118
WRITE (484)
YEAR (485) 79 301
YEAR_MONTH (486) 78
ZEROFILL (487) 282
OFFSET (488) 126
ESCAPED (489)
EXISTS (490) 50 243
FSUBSTRING (491) 56 57 58
FTRIM (492) 59 60
FDATE_ADD (493) 61
FDATE_SUB (494) 62
FCOUNT (495) 54 55


Nonterminals, with rules where they appear

$accept (258)
    on left: 0
inputstring (259)
    on left: 1 2 3, on right: 0
stmt_list (260)
    on left: 4 5 6, on right: 1 3 6
sql_segment (261)
    on left: 7, on right: 2 3
select_after_where (262)
    on left: 8, on right: 7
expr (263)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 83 84 85
    86 89 90 91 92 93 94 95 96 97 98 99 100 101, on right: 16 17 18
    19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    40 41 42 43 44 45 46 47 48 49 55 57 58 60 61 62 63 64 65 66 67
    68 74 75 76 77 78 79 80 81 82 83 84 86 87 88 89 90 91 92 101 109
    112 113 120 124 125 126 144 163 178 216 218 221 223 235 236 237
    238 326 327
val_list (264)
    on left: 67 68, on right: 8 46 47 56 59 60 68 70
opt_val_list (265)
    on left: 69 70, on right: 52 53
trim_ltb (266)
    on left: 71 72 73, on right: 60
interval_exp (267)
    on left: 74 75 76 77 78 79 80 81 82, on right: 61 62
case_list (268)
    on left: 87 88, on right: 83 84 85 86 88
stmt (269)
    on left: 102 189 201 226 230 239 244 322, on right: 4 5 6
select_stmt (270)
    on left: 103 104, on right: 36 37 38 39 48 49 50 51 102 106 107
    188 225 229 318
opt_union (271)
    on left: 105 106 107, on right: 8 103 104
opt_where (272)
    on left: 108 109, on right: 103 104 190 195 200 231
opt_groupby (273)
    on left: 110 111, on right: 8 103 104
groupby_list (274)
    on left: 112 113, on right: 111 113 122
opt_asc_desc (275)
    on left: 114 115 116, on right: 112 113
opt_with_rollup (276)
    on left: 117 118, on right: 111
opt_having (277)
    on left: 119 120, on right: 8 103 104
opt_orderby (278)
    on left: 121 122, on right: 8 103 104 190 231
opt_limit (279)
    on left: 123 124 125 126, on right: 8 103 104 190 231
opt_into_list (280)
    on left: 127 128 129, on right: 103 104
column_list (281)
    on left: 130 131, on right: 128 131 179 213 255 256 257 258 259
    270
select_opts (282)
    on left: 132 133 134 135 136 137 138 139 140, on right: 103 104
    106 107 133 134 135 136 137 138 139 140
select_expr_list (283)
    on left: 141 142 143, on right: 103 104 142
select_expr (284)
    on left: 144, on right: 141 142
opt_as_alias (285)
    on left: 145 146 147, on right: 51 107 144 152 153 154 155
table_references (286)
    on left: 148 149, on right: 104 149 157 195 200 231
table_reference (287)
    on left: 150 151, on right: 148 149 158 161 162 163 164 165
table_factor (288)
    on left: 152 153 154 155 156 157 158, on right: 150 161 162 163
    164 165
opt_as (289)
    on left: 159 160, on right: 156 318
join_table (290)
    on left: 161 162 163 164 165, on right: 151
opt_inner_cross (291)
    on left: 166 167 168, on right: 161
opt_outer (292)
    on left: 169 170, on right: 164 173 174
left_or_right (293)
    on left: 171 172, on right: 164
opt_left_or_right_outer (294)
    on left: 173 174 175, on right: 165
opt_join_condition (295)
    on left: 176 177, on right: 161
join_condition (296)
    on left: 178 179, on right: 164 177
index_hint (297)
    on left: 180 181 182 183, on right: 152 153 154 155
opt_for_join (298)
    on left: 184 185, on right: 180 181 182
index_list (299)
    on left: 186 187, on right: 180 181 182 187
table_subquery (300)
    on left: 188, on right: 156
delete_stmt (301)
    on left: 190 195 200, on right: 189
delete_opts (302)
    on left: 191 192 193 194, on right: 190 191 192 193 195 200
delete_list (303)
    on left: 196 197, on right: 195 197 200
opt_dot_star (304)
    on left: 198 199, on right: 196 197
insert_stmt (305)
    on left: 202 220 225, on right: 201
opt_ondupupdate (306)
    on left: 203 204, on right: 202 220 225 227 228 229
insert_opts (307)
    on left: 205 206 207 208 209, on right: 202 206 207 208 209 220
    225 227 228 229 233 234
opt_into (308)
    on left: 210 211, on right: 202 220 225 227 228 229
opt_col_names (309)
    on left: 212 213, on right: 202 225 227 229
insert_vals_list (310)
    on left: 214 215, on right: 202 215 227
insert_vals (311)
    on left: 216 217 218 219, on right: 214 215 218 219
insert_asgn_list (312)
    on left: 221 222 223 224, on right: 204 220 223 224 228
replace_stmt (313)
    on left: 227 228 229, on right: 226
update_stmt (314)
    on left: 231, on right: 230
update_opts (315)
    on left: 232 233 234, on right: 231
update_asgn_list (316)
    on left: 235 236 237 238, on right: 231 237 238
create_database_stmt (317)
    on left: 240 241, on right: 239
opt_if_not_exists (318)
    on left: 242 243, on right: 240 241 245 246 247 248 249 250
create_table_stmt (319)
    on left: 245 246 247 248 249 250, on right: 244
opt_temporary (320)
    on left: 251 252, on right: 245 246 247 248 249 250
create_col_list (321)
    on left: 253 254, on right: 245 246 247 249 254
create_definition (322)
    on left: 255 256 257 258 259 261, on right: 253 254
$@1 (323)
    on left: 260, on right: 261
column_atts (324)
    on left: 262 263 264 265 266 267 268 269 270 271 272 273 274, on right:
    261 263 264 265 266 267 268 269 270 271 272 273 274
opt_length (325)
    on left: 275 276 277, on right: 286 287 288 289 290 291 292 293
    294 295 296 302 304
opt_binary (326)
    on left: 278 279, on right: 310 311 312 313
opt_uz (327)
    on left: 280 281 282, on right: 281 282 287 288 289 290 291 292
    293 294 295 296
opt_csc (328)
    on left: 283 284 285, on right: 284 285 302 303 310 311 312 313
    314 315
data_type (329)
    on left: 286 287 288 289 290 291 292 293 294 295 296 297 298 299
    300 301 302 303 304 305 306 307 308 309 310 311 312 313 314 315,
    on right: 261
enum_list (330)
    on left: 316 317, on right: 314 315 317
create_select_statement (331)
    on left: 318, on right: 247 248 249 250
opt_ignore_replace (332)
    on left: 319 320 321, on right: 318
set_stmt (333)
    on left: 323, on right: 322
set_list (334)
    on left: 324 325, on right: 323 325
set_expr (335)
    on left: 326 327, on right: 324 325


State 0

    0 $accept: . inputstring $end

    NAME               shift, and go to state 1
    RISK_FUNCTION      shift, and go to state 2
    STRING             shift, and go to state 3
    INTNUM             shift, and go to state 4
    BOOL               shift, and go to state 5
    APPROXNUM          shift, and go to state 6
    USERVAR            shift, and go to state 7
    '!'                shift, and go to state 8
    NOT                shift, and go to state 9
    '-'                shift, and go to state 10
    BINARY             shift, and go to state 11
    CASE               shift, and go to state 12
    CONVERT            shift, and go to state 13
    CREATE             shift, and go to state 14
    CURRENT_DATE       shift, and go to state 15
    CURRENT_TIME       shift, and go to state 16
    CURRENT_TIMESTAMP  shift, and go to state 17
    CURRENT_USER       shift, and go to state 18
    DELETE             shift, and go to state 19
    IF                 shift, and go to state 20
    INSERT             shift, and go to state 21
    REPLACE            shift, and go to state 22
    SELECT             shift, and go to state 23
    SET                shift, and go to state 24
    UPDATE             shift, and go to state 25
    EXISTS             shift, and go to state 26
    FSUBSTRING         shift, and go to state 27
    FTRIM              shift, and go to state 28
    FDATE_ADD          shift, and go to state 29
    FDATE_SUB          shift, and go to state 30
    FCOUNT             shift, and go to state 31
    '('                shift, and go to state 32
    '{'                shift, and go to state 33

    inputstring           go to state 34
    stmt_list             go to state 35
    sql_segment           go to state 36
    select_after_where    go to state 37
    expr                  go to state 38
    val_list              go to state 39
    stmt                  go to state 40
    select_stmt           go to state 41
    delete_stmt           go to state 42
    insert_stmt           go to state 43
    replace_stmt          go to state 44
    update_stmt           go to state 45
    create_database_stmt  go to state 46
    create_table_stmt     go to state 47
    set_stmt              go to state 48


State 1

    9 expr: NAME .
   10     | NAME . '.' NAME
   53     | NAME . '(' opt_val_list ')'

    '.'  shift, and go to state 49
    '('  shift, and go to state 50

    $default  reduce using rule 9 (expr)


State 2

   52 expr: RISK_FUNCTION . '(' opt_val_list ')'

    '('  shift, and go to state 51


State 3

   12 expr: STRING .

    $default  reduce using rule 12 (expr)


State 4

   13 expr: INTNUM .

    $default  reduce using rule 13 (expr)


State 5

   15 expr: BOOL .

    $default  reduce using rule 15 (expr)


State 6

   14 expr: APPROXNUM .

    $default  reduce using rule 14 (expr)


State 7

   11 expr: USERVAR .
   44     | USERVAR . ASSIGN expr

    ASSIGN  shift, and go to state 52

    $default  reduce using rule 11 (expr)


State 8

   31 expr: '!' . expr
